--- a/index.html
+++ b/index.html
@@ -11,7 +11,41 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="main-container">
+        <div class="header">
+            <h1>Tic Tac Toe</h1>
+            <p>Are you ready to begin?</p>
+        </div>
+        <div class="game-container">
+            <div class="game-tile">
+                <img src="icons/x-icon.png">
+            </div>
+            <div class="game-tile">
+                <img src="icons/x-icon.png">
+            </div>
+            <div class="game-tile">
+                <img src="icons/x-icon.png">
+            </div>
+            <div class="game-tile">
+                <img src="icons/x-icon.png">
+            </div>
+            <div class="game-tile">
+                <img src="icons/x-icon.png">
+            </div>
+            <div class="game-tile">
+                <img src="icons/x-icon.png">
+            </div>
+            <div class="game-tile">
+                <img src="icons/x-icon.png">
+            </div>
+            <div class="game-tile">
+                <img src="icons/x-icon.png">
+            </div>
+            <div class="game-tile">
+                <img src="icons/x-icon.png">
+            </div>
+        </div>
+    </div>
 </body>
 <script src="script.js" ></script>
 </html>
