--- a/index.html
+++ b/index.html
@@ -17,33 +17,36 @@
             <p>Are you ready to begin?</p>
         </div>
         <div class="game-container">
-            <div class="game-tile">
-                <img src="icons/x-icon.png">
+            <div class="game-tile" data-tileRow="0" data-tileColumn="0">
+                <img src="icons/dash.png" class="game-tile-img">
             </div>
-            <div class="game-tile">
-                <img src="icons/x-icon.png">
+            <div class="game-tile" data-tileRow="0" data-tileColumn="1">
+                <img src="icons/dash.png" class="game-tile-img">
             </div>
-            <div class="game-tile">
-                <img src="icons/x-icon.png">
+            <div class="game-tile" data-tileRow="0" data-tileColumn="2">
+                <img src="icons/dash.png" class="game-tile-img">
             </div>
-            <div class="game-tile">
-                <img src="icons/x-icon.png">
+            <div class="game-tile" data-tileRow="1" data-tileColumn="0">
+                <img src="icons/dash.png" class="game-tile-img">
             </div>
-            <div class="game-tile">
-                <img src="icons/x-icon.png">
+            <div class="game-tile" data-tileRow="1" data-tileColumn="1">
+                <img src="icons/dash.png" class="game-tile-img">
             </div>
-            <div class="game-tile">
-                <img src="icons/x-icon.png">
+            <div class="game-tile" data-tileRow="1" data-tileColumn="2">
+                <img src="icons/dash.png" class="game-tile-img">
             </div>
-            <div class="game-tile">
-                <img src="icons/x-icon.png">
+            <div class="game-tile" data-tileRow="2" data-tileColumn="0">
+                <img src="icons/dash.png" class="game-tile-img">
             </div>
-            <div class="game-tile">
-                <img src="icons/x-icon.png">
+            <div class="game-tile" data-tileRow="2" data-tileColumn="1">
+                <img src="icons/dash.png" class="game-tile-img">
             </div>
-            <div class="game-tile">
-                <img src="icons/x-icon.png">
+            <div class="game-tile" data-tileRow="2" data-tileColumn="2">
+                <img src="icons/dash.png" class="game-tile-img">
             </div>
+        </div>
+        <div class="game-status">
+            <h1 id="congrats-message" class="invisible">Congrats You Win!</h1>
         </div>
     </div>
 </body>
