--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="dialog-box" class="dialog-box open">
+        <div class="content-area">
+            <h1>Welcome, to tic tac toe</h1>
+            <div class="name-form">Please enter your name: <input type="text"></div>
+            <button>Begin</button>
+        </div>
+    </div>
     <div class="main-container">
         <div class="header">
             <h1>Tic Tac Toe</h1>
-            <p>Are you ready to begin?</p>
         </div>
         <div class="game-container">
             <div class="game-tile" data-tileRow="0" data-tileColumn="0">
