Nearly finished resetting and score system

--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
                     <img src="icons/dash.png" class="game-tile-img">
                 </div>
             </div>
-            <div class="text-container">
+            <div id="text-container" class="text-container">
                 <textarea id="textarea"></textarea>
-                <button id="resetBtn">Reset</button>
+                <button id="resetBtn" class="menuBtn">Reset</button>
             </div>
         </div>
         <div class="score-container">
             <div class="player-score">
                 <h1>Player 1</h1>
-                <h1 id="player1-score">0</h1>
+                <h1 id="player1-score" class="player-score-num">0</h1>
             </div>
             <div class="player-score">
                 <h1>Player 2</h1>
-                <h1 id="player2-score">0</h1>
+                <h1 id="player2-score" class="player-score-num">0</h1>
             </div>
         </div>
         <div class="game-status">
