--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
             <h1>Welcome, to tic tac toe</h1>
             <p>Do you wish to play against a computer or with a friend nearby?</p>
             <div id="gamemode-buttons">
-                <button id="cpuBtn" class="dialogBtn">CPU</button>
+                <button id="cpuBtn" class="dialogBtn" disabled>CPU</button>
                 <button id="humanBtn" class="dialogBtn">Human</button>
             </div>
-            <div class="name-form">Please enter your name: <input type="text"></div>
-            <div class="name-form invisible">Please enter your friend's name: <input type="text"></div>
+            <div class="name-form">Please enter your name: <input id="first-player-name" type="text"></div>
+            <div id="second-name" class="name-form invisible">Please enter your friend's name: <input id="second-player-name" type="text"></div>
             <button id="beginBtn" class="dialogBtn">Begin</button>
+            <p id="validation-msg" class="invisible">Please enter your name(s) to continue.</p>
         </div>
     </div>
     <div class="main-container">
@@ -65,11 +66,11 @@
         </div>
         <div class="score-container">
             <div class="player-score">
-                <h1>Player 1</h1>
+                <h1 id="player1-name">Player 1</h1>
                 <h1 id="player1-score" class="player-score-num">0</h1>
             </div>
             <div class="player-score">
-                <h1>Player 2</h1>
+                <h1 id="player2-name">Player 2</h1>
                 <h1 id="player2-score" class="player-score-num">0</h1>
             </div>
         </div>
